# solara_integration

./: manage.py  pyproject.toml
solara_integration/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
